data/derived/comb/progs/unify/prog0151.ml.out
Characters 155-166:
  length_diff;;
  ^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         bool
